--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.3.7",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.3",
     "nunjucks": "^3.1.2"
   },
