--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.3.7",
-    "nodemon": "^1.18.3",
-    "nunjucks": "^3.1.2"
+    "mongose": "0.0.2-security",
+    "nodemon": "^1.18.5",
+    "nunjucks": "^3.1.3"
   },
   "devDependencies": {},
   "scripts": {
