--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "md5": "^2.2.1",
     "mongoose": "^5.3.7",
     "nodemon": "^1.18.3",
     "nunjucks": "^3.1.2"
