--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "md5": "^2.2.1",
     "mongoose": "^5.3.7",
     "mongose": "0.0.2-security",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.5",
     "nunjucks": "^3.1.3"
   },
