--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.3.7",
+    "mongoose": "4.7.3",
     "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "nodemon": "^1.18.5",
     "nunjucks": "^3.1.2"
   },
