--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
     "nodemon": "^1.18.5",
-    "nunjucks": "^3.1.2",
-    "pdf-image": "^2.0.0"
+    "nunjucks": "^3.1.2"
   },
   "devDependencies": {},
   "scripts": {
