--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "4.7.3",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.5",
     "nunjucks": "^3.1.2"
   },
