--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "json2csv": "^4.3.1",
     "md5": "^2.2.1",
     "mongoose": "4.7.3",
     "multer": "^1.4.1",
