--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nunjucks": "^3.1.2",
     "pdf-image": "^2.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nunjucks-date-filter": "^0.1.1"
+  },
   "scripts": {
     "start": "nodemon server.js"
   },
