--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
+    "https": "^1.0.0",
     "json2csv": "^4.3.1",
     "md5": "^2.2.1",
     "mongoose": "4.7.3",
@@ -19,7 +20,9 @@
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.5",
     "nunjucks": "^3.1.2",
-    "pdf-image": "^2.0.0"
+    "path": "^0.12.7",
+    "pdf-image": "^2.0.0",
+    "recaptcha": "^1.2.1"
   },
   "scripts": {
     "start": "nodemon server.js"
