--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "express-recaptcha": "2.1.0",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
@@ -21,8 +22,7 @@
     "nodemon": "^1.18.5",
     "nunjucks": "^3.1.2",
     "path": "^0.12.7",
-    "pdf-image": "^2.0.0",
-    "recaptcha": "^1.2.1"
+    "pdf-image": "^2.0.0"
   },
   "scripts": {
     "start": "nodemon server.js"
